--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "serve": "^11.3.2",
     "snowpack": "^3.0.1"
   },
   "dependencies": {
