--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "scripts": {
     "start": "snowpack dev",
-    "build": "snowpack build",
-    "eslint": "eslint"
+    "build": "snowpack build"
   },
   "devDependencies": {
     "@snowpack/plugin-react-refresh": "^2.4.0",
@@ -16,9 +15,12 @@
     "snowpack": "^3.0.1"
   },
   "dependencies": {
-    "bootstrap": "^4.5.3",
+    "@iconify-icons/ant-design": "^1.1.0",
+    "@iconify-icons/bx": "^1.1.0",
+    "@iconify-icons/gridicons": "^1.1.0",
+    "@iconify-icons/ic": "^1.1.2",
+    "@iconify/react": "^1.1.3",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
   }
